# nofib

./: .darcs-boring  .gitignore  .gitlab-ci.yml  BUGS  Jmakefile  Makefile  Makefile.BOOT  Nofib.hs  PATCHLEVEL  README  README.md  Simon-nofib-notes
GHC_ONLY/: Jmakefile  Makefile
GHC_ONLY/arith001/: Jmakefile  Main.hs  Makefile  arith001.stdout
GHC_ONLY/arith002/: Jmakefile  Main.hs  Makefile
GHC_ONLY/arith003/: Jmakefile  Main.hs  Makefile
GHC_ONLY/arith004/: Jmakefile  Main.hs  Makefile
GHC_ONLY/arith005/: Jmakefile  Main.hs  Makefile  arith005.stdout
GHC_ONLY/arith006/: Jmakefile  Makefile  arith006.stdout
GHC_ONLY/arith007/: Jmakefile  Main.hs  Makefile
GHC_ONLY/arith008/: Jmakefile  Main.hs  Makefile  arith008.stdout
GHC_ONLY/arith009/: Jmakefile  Makefile
GHC_ONLY/array001/: Jmakefile  Main.hs  Makefile  array001.stdout
GHC_ONLY/array002/: Jmakefile  Main.hs  Makefile  array002.stdout
GHC_ONLY/bugs/: Jmakefile  Makefile
GHC_ONLY/cg001/: Jmakefile  Makefile
GHC_ONLY/cg002/: Jmakefile  Makefile
GHC_ONLY/cg003/: Jmakefile  Makefile
GHC_ONLY/cg004/: Jmakefile  Makefile
GHC_ONLY/cg005/: Jmakefile  Makefile
GHC_ONLY/cg006/: Jmakefile  Makefile
GHC_ONLY/cg007/: Jmakefile  Makefile
GHC_ONLY/cg008/: Jmakefile  Makefile
GHC_ONLY/cg009/: Jmakefile  Makefile
GHC_ONLY/cg010/: Jmakefile  Makefile
GHC_ONLY/cg011/: Jmakefile  Makefile
GHC_ONLY/cg012/: Jmakefile  Main.hs  Makefile
GHC_ONLY/cg013/: Jmakefile  MAIL  Makefile  cg013.stdout
GHC_ONLY/cg014/: Jmakefile  Makefile  cg014.stdout
GHC_ONLY/cg015/: Jmakefile  Main.hs  Main2.hs  Main3.hs  Main4.hs  Makefile
UNUSED/: Jmakefile  Makefile
benchmarks/: .gitignore  Makefile  Makefile-template
benchmarks/hackage/Regex/: Setup.lhs  addr.txt  regex-pderiv.cabal
benchmarks/hackage/Regex/Fibon/: Instance.hs
benchmarks/hackage/Regex/Fibon/data/ref/output/: pderiv.stdout.expected
benchmarks/hackage/Regex/Text/Regex/PDeriv/: Common.lhs  IntPattern.lhs
benchmarks/hackage/Regex/Text/Regex/PDeriv/ByteString/: LeftToRightD.lhs  Posix.lhs
benchmarks/hackage/Regex/regex-base/Text/Regex/: Base.hs
benchmarks/hackage/Xsact/: xsact.cabal
benchmarks/hackage/Xsact/Fibon/: Instance.hs
benchmarks/hackage/Xsact/src/: Cluster.lhs  EST.lhs  Fasta.lhs  Pairs.lhs  Xplit.lhs  Xtract.lhs  hooks.c
benchmarks/hackage/Xsact/test-xsact/: bigtest.sh  time.sh
benchmarks/hackage/Xsact/test-xtract/: ignN.seq  single.seq
distributed/: README
fibon/: .gitignore  Makefile  README  hist.rb  sloc.rb
fibon/Dph/QuickHull/: Makefile  QuickHull.cabal
fibon/Dph/QuickHull/Fibon/: Instance.hs
fibon/Dph/QuickHull/src/: QuickHull.hs  QuickHullVect.hs  TestData.hs  gen.hs  vect.hs  vectSVG.hs
fibon/Dph/Sumsq/: Makefile  Sumsq.cabal
fibon/Dph/Sumsq/Fibon/: Instance.hs
fibon/Dph/Sumsq/src/: SumSqPrim.hs  SumSqVect.hs  prim.hs  vect.hs
fibon/Hackage/Funsat/: Main.hs  Makefile  funsat.cabal
fibon/Hackage/Funsat/Fibon/: Instance.hs  README
fibon/Hackage/Funsat/Fibon/data/test/output/: funsat.stdout.expected
fibon/Hackage/Funsat/bimap/Test/: Tests.hs
fibon/Hackage/Funsat/bitset/: bitset.cabal
fibon/Hackage/Funsat/parse-dimacs/: parse-dimacs.cabal
fibon/Hackage/Funsat/parsec/: parsec.cabal
fibon/Hackage/Funsat/src/Funsat/: Solver.hs
fibon/Hackage/Funsat/syb/src/Data/: Generics.hs
fibon/Hackage/Funsat/syb/src/Data/Generics/: Instances.hs
fibon/Hackage/Funsat/syb/tests/: Bits.hs
fibon/Hackage/Hgalib/: GA.hs  Hgalib.stdout  LICENSE  Makefile  README  hgalib.cabal
fibon/Hackage/Hgalib/Chromosome/: ANN.hs  Bits.hs  GP.hs
fibon/Hackage/Hgalib/Fibon/: Instance.hs
fibon/Hackage/Hgalib/Fibon/data/ref/output/: ga.stdout.expected
fibon/Hackage/Hgalib/Fibon/data/test/output/: ga.stdout.expected
fibon/Hackage/Hgalib/Population/: Array.hs  List.hs
fibon/Hackage/Hgalib/examples/: ANNTest.hs  BitTest.hs  GPTest.hs
fibon/Hackage/Simgi/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  README  simgi.cabal
fibon/Hackage/Simgi/Fibon/: Instance.hs
fibon/Hackage/Simgi/Fibon/data/ref/output/: oregonator_output.dat.expected
fibon/Hackage/Simgi/Fibon/data/test/input/: oregonator.sgl
fibon/Hackage/Simgi/Fibon/data/test/output/: simgi.stdout.expected
fibon/Hackage/Simgi/Models/: irreversible_bimol.sgl  irreversible_trimol.sgl  oregonator.sgl  reversible_bimol.sgl  reversible_trimol.sgl
fibon/Hackage/Simgi/doc/: Makefile  simgi.html  simgi.mdml
fibon/Hackage/Simgi/mersenne-random-pure64/System/Random/Mersenne/Pure64/: MTBlock.hs
fibon/Hackage/Simgi/mersenne-random-pure64/tests/: copy.hs
fibon/Hackage/Simgi/src/: CommandLine.hs  Engine.hs  GenericModel.hs  IO.hs  InputCheck.hs  InputParser.hs  Messages.hs  PrettyPrint.hs  RpnData.hs  RpnParser.hs  TokenParser.hs  simgi.hs
fibon/Repa/FFT3d/: FFT3d.cabal  Makefile
fibon/Repa/FFT3d/Fibon/: Instance.hs
fibon/Repa/FFT3d/src/FFT/HighPass3d/src/: Main.hs
gc/: Makefile
ghc/: Makefile
imaginary/: Jmakefile  Makefile
mk/: boilerplate.mk  ghc-opts.mk  ghc-paths.mk  ghc-suffix.mk  ghc-target.mk  nofib.mk  opts.mk  paths.mk  site.mk  suffix.mk  target.mk
mkworld/: Jmakefile  install-nofib-ghc.ljm  install-nofib-hbc.ljm  install-nofib-nhc.ljm  install-nofib.ljm  macros-nofib-ghc.jm  macros-nofib-ghc.ljm  macros-nofib-hbc.jm  macros-nofib-hbc.ljm  macros-nofib-nhc.ljm  macros-nofib.jm  macros-nofib.ljm  nofib.lit  only4-nofib-ghc.jm  only4-nofib-ghc.ljm  only4-nofib-hbc.jm  only4-nofib-hbc.ljm  only4-nofib-nhc.jm  only4-nofib-nhc.ljm  only4-nofib.jm  only4-nofib.ljm  site-nofib-ghc.jm  site-nofib-hbc.jm  site-nofib-nhc.jm  site-nofib.jm.in  suffixes-nofib-ghc.ljm  suffixes-nofib-hbc.ljm  suffixes-nofib-nhc.ljm  suffixes-nofib.jm  suffixes-nofib.ljm  utils-nofib-ghc.ljm  utils-nofib-hbc.ljm  utils-nofib-nhc.ljm  utils-nofib.jm  utils-nofib.ljm
nofib-analyse/: CmdLine.hs  GenUtils.lhs  Main.hs  Makefile  Slurp.hs
parallel/: Jmakefile  Makefile
real/: Jmakefile  Makefile
runstdtest/: Makefile  runstdtest.prl
shootout/: Makefile  README
smp/: Makefile
spectral/: Jmakefile  Makefile
supercompile/: Makefile
(+2862 files in other folders)
