Name:                   regex-pderiv
Version:                0.0.8.1
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2010, Kenny Zhuo Ming Lu and Martin Sulzmann
Author:                 Kenny Zhuo Ming Lu and Martin Sulzmann
Maintainer:             luzhuomi@gmail.com, martin.sulzmann@gmail.com
Stability:              Alpha
Homepage:               http://code.google.com/p/xhaskell-library/
Package-URL:            http://darcs.haskell.org/packages/regex-unstable/xhaskell-library
Synopsis:               Replaces/Enhances Text.Regex
Description:            Regex algorithm implementation using partial derivatives
Category:               Text
Tested-With:            GHC
Build-Type:             Simple
Cabal-Version:          >= 1.2.3

flag base4

library 
  Buildable:             False
  --Build-Depends:        regex-base >= 0.93.1, parsec, mtl, containers, bytestring, deepseq, bitset
  Build-Depends:         base >= 4.0 && < 5.0, ghc-prim
  Exposed-Modules:       Text.Regex.PDeriv.ByteString
                         Text.Regex.PDeriv.ByteString.TwoPasses
                         Text.Regex.PDeriv.ByteString.RightToLeft
                         Text.Regex.PDeriv.ByteString.LeftToRight
                         Text.Regex.PDeriv.ByteString.LeftToRightD
                         Text.Regex.PDeriv.ByteString.Posix
                         Text.Regex.PDeriv.Common 
                         Text.Regex.PDeriv.Word
                         Text.Regex.PDeriv.ExtPattern
                         Text.Regex.PDeriv.IntPattern
                         Text.Regex.PDeriv.RE
                         Text.Regex.PDeriv.Parse		
                         Text.Regex.PDeriv.Translate
                         Text.Regex.PDeriv.Nfa			
                         Text.Regex.PDeriv.Pretty
                         Text.Regex.PDeriv.Dictionary
  Extensions:             GADTs, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, TypeSynonymInstances, FlexibleContexts
  GHC-Options:            
  GHC-Prof-Options:       -auto-all

executable pderiv
  Main-Is: Main.hs
  Build-Depends:        base >=4 && <5, mtl, containers, bytestring, array
  Hs-Source-Dirs:       ., bench, regex-base, parsec, deepseq, bitset
  Extensions:           GADTs, 
                        MultiParamTypeClasses, 
                        FunctionalDependencies, 
                        FlexibleInstances, 
                        TypeSynonymInstances, 
                        FlexibleContexts
                        -- For bitset
                        ScopedTypeVariables
                        DeriveDataTypeable

  --Other-Modules:        Text.Regex.PDeriv.ByteString.LeftToRight


