Name:           xsact
Version:        1.7.1
License:        GPL
License-File:   LICENSE
Author:         Ketil Malde
Maintainer:     Ketil Malde <ketil@malde.org>

Category:       Bioinformatics
Synopsis:       Cluster EST sequences
Description:    Xsact is an EST clustering program with a variety of output options.
                This package exposes the internal libraries, and provides 4 binaries:
                .
                * xsact; implements a complete multiple-matching clustering algorithm.
                * xplit; This implements a simple splitter for xsact's UniGene-formatted files.
                  Useful if you want to run an assembler on individual clusters.
                * xtract; the eXperimental TRanscript
                  Assembly/Consensus Tool.  The idea is to construct the splice graph
                  from each EST cluster in the input, by first constructing and then
                  traversing the de Bruijn graph of $k-1$-words.
Homepage:       http://malde.org/~ketil/

Cabal-Version:  >= 1.2
Build-Type:     Simple
Tested-With:    GHC==6.8.2

Executable     xsact
               Main-Is:        Xsact.lhs
               Hs-Source-Dirs: src
               Build-Depends:  base >3 && <5, containers, random, array, unix, directory, process
               Ghc-Options:    -Wall -funbox-strict-fields

Executable     xplit
               Buildable:      False
               Main-Is:        Xplit.lhs
               Hs-Source-Dirs: .
               Ghc-Options:    -Wall -funbox-strict-fields
               Build-Depends:  base

Executable     xtract
               Buildable:      False
               Main-Is:        Xtract.lhs
               Hs-Source-Dirs: .
               Ghc-Options:    -Wall -funbox-strict-fields
               Build-Depends:  base, random, array, containers
