Name:                QuickHull
Version:             0.1
Stability:           Experimental
Category:            Benchmarking
Build-type:          Simple
Cabal-version:       >=1.2

Executable quickhull
  Main-is:             vect.hs
  Hs-Source-Dirs:      src ../_DphLib
  Build-depends:       base == 4.*,
                       dph-prim-par,
                       old-time,
                       dph-par,
                       dph-base,
                       random
