Name:                funsat
Version:             0.6.1
Cabal-Version:       >= 1.2
Description:

    Funsat is a native Haskell SAT solver that uses modern techniques for
    solving SAT instances.  Current features include two-watched literals,
    conflict-directed learning, non-chronological backtracking, a VSIDS-like
    dynamic variable ordering, and restarts.  Our goal is to facilitate
    convenient embedding of a reasonably fast SAT solver as a constraint
    solving backend in other applications.

    Currently along this theme we provide unsatisfiable core generation (see
    "Funsat.Resolution") and a logical circuit interface (see "Funsat.Circuit").

    New in 0.6: circuits and BSD3 license.

Synopsis:            A modern DPLL-style SAT solver
Homepage:            http://github.com/dbueno/funsat
Category:            Algorithms
Stability:           beta
License:             BSD3
License-file:        LICENSE
Author:              Denis Bueno
Maintainer:          Denis Bueno <dbueno@gmail.com>
Build-type:          Simple
Extra-source-files:  README CHANGES


Executable funsat
 Main-is:             Main.hs
 Extensions:          CPP,
                      BangPatterns,
                      ScopedTypeVariables,
                      TypeSynonymInstances,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances,
                      FlexibleContexts,

                      -- for bitset
                      DeriveDataTypeable

                      -- for parsec
                      Rank2Types


 CPP-options:         -DTESTING
 Hs-source-dirs:      . src bimap bitset fgl parse-dimacs parsec syb/src
 Other-modules:
                      Control.Monad.MonadST
                      Funsat.FastDom
                      Funsat.Monad
                      Funsat.Resolution
                      Funsat.Solver
                      Funsat.Types
                      Funsat.Types.Internal
                      Funsat.Utils
                      Funsat.Utils.Internal
                      Text.Tabular

 Build-Depends:       base >= 4 && < 5,
                      random,
                      containers,
                      pretty,
                      mtl,
                      time,

                      -- for parsec
                      bytestring,
                      -- for parse-dimacs
                      array

-- Library
--  Buildable:           False
--  Extensions:          CPP,
--                       BangPatterns,
--                       ScopedTypeVariables,
--                       TypeSynonymInstances,
--                       MultiParamTypeClasses,
--                       FunctionalDependencies,
--                       FlexibleInstances,
--                       FlexibleContexts
--  Exposed-modules:     Control.Monad.MonadST
--                       Funsat.Circuit
--                       Funsat.Monad
--                       Funsat.Resolution
--                       Funsat.Solver
--                       Funsat.Types
--                       Funsat.Types.Internal
--                       Text.Tabular
--                       Funsat.Utils
--                       Funsat.Utils.Internal
--  Other-modules:       Funsat.FastDom
--  Ghc-options:         -funbox-strict-fields
--                       -Wall -fwarn-tabs
--                       -fno-warn-name-shadowing
--                       -fno-warn-orphans
--  Extensions:          CPP, ScopedTypeVariables
--  Hs-source-dirs:      src
--  Build-Depends:       base >= 3 && < 5,
--                       containers >= 0.2 && < 0.3,
--                       pretty < 2,
--                       mtl >= 1 && < 2,
--                       array >= 0.2 && < 0.3,
--                       QuickCheck < 2,
--                       parse-dimacs >= 1.2 && < 2,
--                       bitset < 1,
--                       bimap >= 0.2 && < 0.3,
--                       fgl >= 5 && <= 5.4.2.2
