name:                hgalib
version:             0.2
synopsis:            Haskell Genetic Algorithm Library
description:         Haskell Genetic Algorithm Library
category:            AI
license:             PublicDomain
license-file:        LICENSE
author:              Kevin Ellis
maintainer:          Kevin Ellis <ellisk@catlin.edu>
build-type:          Simple
Cabal-Version: >= 1.2
-- Library
--     buildable:       False
--     exposed-modules: GA,
--                      Population.List,
--                      Population.Array,
--                      Chromosome.Bits,
--                      Chromosome.ANN,
--                      Chromosome.GP
--     ghc-options:     -O2
--     build-depends:   base >= 4 && <5, array, mtl, haskell98, diffarray

executable ga
  main-is: examples/GPTest.hs
  build-depends:   base >= 4 && <5, array, mtl, haskell98

