Name:          simgi
Version:       0.3
License:       GPL
license-file:  COPYING
copyright:     (C) 2009-2010 Markus Dittrich, NRBSC & CMU
category:      Scientific Simulation
Synopsis:      stochastic simulation engine
Description:   simgi is a stochastic simulation engine to model
               molecular systems using Gillespie's method.
Author:        <haskelladdict@users.sourceforge.net>
Maintainer:    <haskelladdict@users.sourceforge.net>
stability:     beta 
build-type:    Simple
Homepage:      http://simgi.sourceforge.net/
cabal-version: >= 1.6
extra-source-files: README

Executable simgi
  Build-Depends:  base >= 2 && < 5, containers >= 0.1.0.0,
                  mtl >= 1.1.0.2, haskell98,
                  random >= 1.0.0.1, 
                  -- mersenne dependency 
                  old-time
  Main-Is:        simgi.hs
  hs-source-dirs: src, parsec-2, mersenne-random-pure64

  -- mersenne-random-pure64
  other-modules:     System.Random.Mersenne.Pure64
                     System.Random.Mersenne.Pure64.Base
                     System.Random.Mersenne.Pure64.MTBlock

  c-sources:         mersenne-random-pure64/cbits/mt19937-64.c
                     mersenne-random-pure64/cbits/mt19937-64-unsafe.c
                     mersenne-random-pure64/cbits/mt19937-64-block.c
  include-dirs:      mersenne-random-pure64/include

  -- parsec-2
  extensions:	ExistentialQuantification, PolymorphicComponents
